add merge function to dict

--- a/glide.yaml
+++ b/glide.yaml
@@ -10,3 +10,5 @@ import:
 - package: github.com/Masterminds/semver
   version: v1.2.2
 - package: github.com/stretchr/testify
+- package: github.com/imdario/mergo
+  version: ~0.2.2
