--- a/glide.yaml
+++ b/glide.yaml
@@ -2,8 +2,8 @@ package: github.com/Masterminds/sprig
 import:
 - package: github.com/Masterminds/goutils
   version: ^1.0.0
-- package: github.com/satori/go.uuid
-  version: ^1.2.0
+- package: github.com/google/uuid
+  version: ^0.2
 - package: golang.org/x/crypto
   subpackages:
   - scrypt
