--- a/glide.yaml
+++ b/glide.yaml
@@ -3,7 +3,7 @@ import:
 - package: github.com/Masterminds/goutils
   version: ^1.0.0
 - package: github.com/satori/go.uuid
-  version: ^1.1.0
+  version: =1.2.0
 - package: golang.org/x/crypto
   subpackages:
   - scrypt
