--- a/glide.yaml
+++ b/glide.yaml
@@ -13,3 +13,5 @@ import:
 - package: github.com/imdario/mergo
   version: ~0.2.2
 - package: github.com/huandu/xstrings
+- package: github.com/spf13/cast
+  version: ^1.3.0
